syntax = "proto3";

package proto;
option go_package = "./;proto";

import "FriendBrief.proto";

// CmdId: 4038
// EnetChannelId: 0
// EnetIsReliable: true
message AskAddFriendNotify {
  uint32 target_uid = 13;
  FriendBrief target_friend_brief = 10;
}
