syntax = "proto3";

package proto;
option go_package = "./;proto";

// CmdId: 1723
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarChangeCostumeRsp {
  int32 retcode = 15;
  uint64 avatar_guid = 3;
  uint32 costume_id = 1;
}
