syntax = "proto3";

package proto;
option go_package = "./;proto";

// CmdId: 1681
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarFlycloakChangeNotify {
  uint64 avatar_guid = 12;
  uint32 flycloak_id = 14;
}
