syntax = "proto3";

package proto;
option go_package = "./;proto";


message ChangeAvatarRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1710;
  }

  int32 retcode = 6;
  uint64 cur_guid = 11;
  uint32 skill_id = 5;
}
