syntax = "proto3";

package proto;
option go_package = "./;proto";


message ChooseCurAvatarTeamReq {
  uint32 team_id = 14;
}
