syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AbilityInvokeEntry.proto";

message ClientAbilityChangeNotify {
  uint32 entity_id = 6;
  repeated AbilityInvokeEntry invokes = 8;
}
