syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AiThreatInfo.proto";

message EvtAiSyncCombatThreatInfoNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 360;
  }

  map<uint32, AiThreatInfo> combat_threat_info_map = 14;
}
