syntax = "proto3";

package proto;
option go_package = "./;proto";

import "ForwardType.proto";
import "Vector.proto";

message EvtDoSkillSuccNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 337;
  }

  ForwardType forward_type = 6;
  uint32 caster_id = 10;
  uint32 skill_id = 1;
  Vector forward = 8;
}
