syntax = "proto3";

package proto;
option go_package = "./;proto";

import "GachaInfo.proto";

// CmdId: 1531
// EnetChannelId: 0
// EnetIsReliable: true
message GetGachaInfoRsp {
  int32 retcode = 14;
  repeated GachaInfo gacha_info_list = 12;
  uint32 gacha_random = 13;
  uint32 KKHCOFPEMNJ = 7;
  bool LCPFDBAGIEC = 9;
}
