syntax = "proto3";

package proto;
option go_package = "./;proto";

import "Shop.proto";

message GetShopRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 731;
  }

  int32 retcode = 11;
  Shop shop = 14;
}
