syntax = "proto3";

package proto;
option go_package = "./;proto";


message GetShopmallDataRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 701;
  }

  int32 retcode = 1;
  repeated uint32 shop_type_list = 2;
}
