syntax = "proto3";

package proto;
option go_package = "./;proto";


message PingReq {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 32;
  }

  uint32 seq = 2;
  uint32 client_time = 14;
  bytes sc_data = 11;
  float ue_time = 15;
  double total_tick_time = 12;
}
