syntax = "proto3";

package proto;
option go_package = "./;proto";

import "PropValue.proto";

message PlayerDataNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 135;
  }

  string nick_name = 15;
  uint64 server_time = 2;
  bool is_first_login_today = 11;
  uint32 region_id = 9;
  map<uint32, PropValue> prop_map = 8;
}
