syntax = "proto3";

package proto;
option go_package = "./;proto";

import "PropValue.proto";

message PlayerPropNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 127;
  }

  map<uint32, PropValue> prop_map = 10;
}
