syntax = "proto3";

package proto;
option go_package = "./;proto";


message PostEnterSceneRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 3344;
  }

  int32 retcode = 13;
  uint32 enter_scene_token = 15;
}
