syntax = "proto3";

package proto;
option go_package = "./;proto";


message SetPlayerHeadImageReq {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 4045;
  }

  uint32 avatar_id = 4;
}
