syntax = "proto3";

package proto;
option go_package = "./;proto";


message WearEquipRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 697;
  }

  int32 retcode = 6;
  uint64 avatar_guid = 10;
  uint64 equip_guid = 5;
}
