// Sorapointa - A server software re-implementation for a certain anime game, and avoid sorapointa.
// Copyright (C) 2022  Sorapointa Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "AvatarInfo.proto";
import "AvatarTeam.proto";

option go_package = "./;proto";

// CmdId: 1633
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarDataNotify {
  repeated uint32 owned_costume_list = 11;
  uint64 choose_avatar_guid = 8;
  map<uint32, AvatarTeam> avatar_team_map = 7;
  repeated uint32 Unk3000_NIGPICLBHMA = 9;
  repeated uint64 temp_avatar_guid_list = 12;
  repeated uint32 owned_flycloak_list = 1;
  repeated AvatarInfo avatar_list = 6;
  uint32 cur_avatar_team_id = 2;
}
